--- a/Twaster/TweetUtils/templates/TweetUtils/base.html
+++ b/Twaster/TweetUtils/templates/TweetUtils/base.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">TWASTER</a>
+                <a class="navbar-brand" href="/">TWASTER</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
