--- a/Twaster/TweetUtils/templates/TweetUtils/index.html
+++ b/Twaster/TweetUtils/templates/TweetUtils/index.html
@@ -62,7 +62,7 @@
     $(document).ready(function() {
         $('#detectedtable').DataTable({
             "order": [
-                [1, "desc"]
+                [0, "asc"]
             ]
         });
     });
